--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awacon</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Include Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
 
@@ -35,13 +37,19 @@
 
     <div class="dashboard-container" id="dashboardContainer" style="display: none;">
         <h2>Welcome to the Dashboard!</h2>
-        <a href="#" onclick="logout()">Logout</a>
-        <div id="tabContent" class="tab-content"></div>
-        <div class="footer">
-            <img src="icon1.png" alt="Tab 1" onclick="switchTab(1)">
-            <img src="controls.png" alt="Tab 2" onclick="switchTab(2)">
-            <img src="settings.png" alt="Tab 3" onclick="switchTab(3)">
+        <div class="tabs">
+            <button onclick="switchTab(1)">
+                <i class="fas fa-home"></i> Tab 1
+            </button>
+            <button onclick="switchTab(2)">
+                <i class="fas fa-cog"></i> Tab 2
+            </button>
+            <button onclick="switchTab(3)">
+                <i class="fas fa-chart-bar"></i> Tab 3
+            </button>
         </div>
+        <div id="tabContent" class="tab-content"></div>
+        <a href="#" onclick="logout()">Logout</a>
     </div>
 
     <div class="register-container" id="registerContainer" style="display: none;">
